--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="js/keypress.js"></script>
   <script src="js/juego.js"></script>
 </head>
-<body onload="start();">
+<body>
   <header>
     <nav>
       <h1>My First Dungeon Game 💀</h1>
@@ -27,12 +27,12 @@
   
   <main>
     <section id="game-container">
-      <canvas id="canvas" width="750" height="500" style="border: 2px solid #000000;"></canvas>
+      <canvas id="canvas" width="750" height="750" style="border: 2px solid #000000;"></canvas>
     </section>
   </main>
   
   <footer>
-    <p class="c-text">&copy; 2020 by Cuatroa</p>
+    <p class="c-text">&copy; 2025 by Leem0n.Studio</p>
   </footer>
 </body>
 </html>
